option('interfaces', type: 'array', choices: ['library', 'dbus', 'rest', 'nodejs', 'java'], value: ['library'])
option('ipv6', type: 'boolean', value: true, description: 'Enable IPv6 support')
option('name_service', type: 'boolean', value: true, description: 'Enable Name Service')
option('video', type: 'boolean', value: true, description: 'Enable video support')

option('hw_acceleration', type: 'feature', value: 'auto', description: 'Enable hardware acceleration')
option('opensl', type: 'feature', value: 'auto', description: 'Enable support for OpenSL')
option('alsa', type: 'feature', value: 'auto', description: 'Enable support for ALSA')
option('pulseaudio', type: 'feature', value: 'auto', description: 'Enable support for PulseAudio')
option('jack', type: 'feature', value: 'auto', description: 'Enable support for Jack')
option('portaudio', type: 'feature', value: 'auto', description: 'Enable support for PortAudio')
option('opus', type: 'feature', value: 'auto', description: 'Enable support for Opus')
option('upnp', type: 'feature', value: 'auto', description: 'Enable support for UPnP')
option('natpmp', type: 'feature', value: 'auto', description: 'Enable support for NAT-PMP')
option('sdes', type: 'feature', value: 'auto', description: 'Enable support for sdes key exchange')
