option('interfaces', type: 'array', choices: ['library', 'dbus', 'nodejs'], value: ['library'])
option('video', type: 'boolean', value: true, description: 'Enable video support')
option('hw_acceleration', type: 'boolean', value: true, description: 'Enable hardware acceleration')

option('name_service', type: 'feature', value: 'auto', description: 'Enable Name Service')
option('opensl', type: 'feature', value: 'auto', description: 'Enable support for OpenSL')
option('alsa', type: 'feature', value: 'auto', description: 'Enable support for ALSA')
option('pulseaudio', type: 'feature', value: 'auto', description: 'Enable support for PulseAudio')
option('jack', type: 'feature', value: 'auto', description: 'Enable support for Jack')
option('portaudio', type: 'feature', value: 'auto', description: 'Enable support for PortAudio')
option('upnp', type: 'feature', value: 'auto', description: 'Enable support for UPnP')
option('natpmp', type: 'feature', value: 'auto', description: 'Enable support for NAT-PMP')

option('natpmp_prefix', type: 'string', value: '', description: 'A path where the library "natpmp" is installed')
